[Feat] dto&swagger for studentPlan and recordBook
